Configured Neon DB and migrations

--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=admin
-DB_HOST=localhost
+# Neon Database Credentials
+DB_NAME=neondb
+DB_USER=neondb_owner
+DB_PASSWORD=npg_sQEc3G9JOTZu
+DB_HOST=ep-old-sun-a1iwuu78-pooler.ap-southeast-1.aws.neon.tech
 DB_PORT=5432
+DB_DIALECT=postgres
 
+# Ensure SSL is required for Neon
+DB_SSL=true
+
+# JWT Secret (keep it secure!)
 JWT_SECRET=secretkey
