refactored to use DB_URL

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ DB_HOST=ep-old-sun-a1iwuu78-pooler.ap-southeast-1.aws.neon.tech
 DB_PORT=5432
 DB_DIALECT=postgres
 
+DB_URL=postgresql://neondb_owner:npg_sQEc3G9JOTZu@ep-old-sun-a1iwuu78-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+
 # Ensure SSL is required for Neon
 DB_SSL=true
 
