--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "migrate": "sequelize-cli db:migrate --config sequelize.config.js",
     "seed": "sequelize-cli db:seed:all --config sequelize.config.js"
