--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "start:prod": "node dist/src/index.js",
     "migrate": "sequelize-cli db:migrate --config sequelize.config.js",
     "seed": "sequelize-cli db:seed:all --config sequelize.config.js"
   },
